# stocksense

./: .env.example  .gitignore  deploy.sh  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/agents/: __init__.py  base.py  debate.py  fundamental.py  manager.py  pipeline.py  risk.py  sentiment.py  technical.py
backend/app/api/: __init__.py  analysis.py  auth.py  meta.py  quotes.py  stocks.py  watchlist.py
backend/app/core/: cache.py  db.py  redis.py  registry.py  security.py
backend/app/data/: akshare_client.py  orchestrator.py  yfinance_client.py
backend/app/llm/: __init__.py
backend/app/models/: __init__.py
backend/app/prompts/: bear.md  bull.md  fundamental.md  manager.md  risk.md  sentiment.md  technical.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  serve.py  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: card.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AnalysisHistoryPage.tsx  DashboardPage.tsx  LoginPage.tsx  ScreenerPage.tsx  StockDetailPage.tsx
